# profielentoolbox

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt
.claude/: settings.local.json
docs/: index.html
src/profielentoolbox/: __init__.py  extract_gef.py  hello_world.py
src/profielentoolbox/models/: __init__.py  gef.py
tests/: conftest.py  test_example.py  test_extract_gef.py  test_fme_class.py  test_fme_class_import_extract_gef.py  test_fme_class_import_hello_world.py  test_fme_import.py  test_import.py
tests/fixtures/: sample.gef
tests/stubs/: fme.py  fmeobjects.py
